--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -143,6 +143,28 @@ code {
   }
 }
 
+// .headroom {
+//   top: 0;
+//   left: 0;
+//   right: 0;
+//   z-index: 1;
+// }
+// .headroom--unfixed {
+//   position: relative;
+//   transform: translateY(0);
+// }
+// .headroom--scrolled {
+//   transition: transform 200ms ease-in-out;
+// }
+// .headroom--unpinned {
+//   position: sticky;
+//   transform: translateY(-100%);
+// }
+// .headroom--pinned {
+//   position: sticky;
+//   transform: translateY(0%);
+// }
+
 [data-theme='mytheme'] .btn-primary {
   // background-image: linear-gradient(40deg, #8930dc, #8930dc 40%, #00ddeb);
   // background-color: linear-gradient(40deg, #8930dc, #8930dc 40%, #00ddeb);
