--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -100,6 +100,7 @@ code {
   height: 13px;
   border-radius: 50%;
   background: $text-primary-col;
+  background: #8930dc;
   animation-timing-function: cubic-bezier(0, 1, 1, 0);
 }
 .lds-ellipsis div:nth-child(1) {
