--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -24,6 +24,7 @@ body {
 }
 
 * {
+  overflow-x: hidden;
   scrollbar-width: auto;
   scrollbar-color: lighten($bg-primary-col, 25%);
   &::-webkit-scrollbar {
@@ -77,7 +78,6 @@ code {
   position: fixed;
   transition: all 1s;
 }
-
 
 .lds-ellipsis {
   display: inline-block;
